[gd_scene load_steps=13 format=4 uid="uid://brsdgjvcs3052"]

[ext_resource type="Script" uid="uid://ts7o3i13teqc" path="res://martian_mike_game/scripts/level_01.gd" id="1_q2oxr"]
[ext_resource type="PackedScene" uid="uid://c3p1qek7e5vl" path="res://martian_mike_game/scenes/parallax_background.tscn" id="2_0afmg"]
[ext_resource type="PackedScene" uid="uid://wff142rq0dty" path="res://martian_mike_game/scenes/mm_player.tscn" id="2_q2oxr"]
[ext_resource type="Texture2D" uid="uid://qkitl0l86s8y" path="res://martian_mike_game/assets/textures/bg/Green.png" id="3_b3byx"]
[ext_resource type="PackedScene" uid="uid://ccik41r2psn32" path="res://martian_mike_game/scenes/jump_pad.tscn" id="4_654ul"]
[ext_resource type="PackedScene" uid="uid://bbiwmdth3fdg5" path="res://martian_mike_game/scenes/saw.tscn" id="5_rrhb4"]
[ext_resource type="PackedScene" uid="uid://ch3h5oqvsn0qf" path="res://martian_mike_game/scenes/spikeball.tscn" id="6_7ny5r"]
[ext_resource type="PackedScene" uid="uid://del8sku1r1hlr" path="res://martian_mike_game/scenes/tile_map_level_01.tscn" id="7_0afmg"]
[ext_resource type="PackedScene" uid="uid://con2bnv4aidow" path="res://martian_mike_game/scenes/start_platform.tscn" id="8_aes6a"]
[ext_resource type="PackedScene" uid="uid://bw1wpme5755v0" path="res://martian_mike_game/scenes/goal.tscn" id="9_nfwdv"]
[ext_resource type="PackedScene" uid="uid://cewhpvjwcxxb4" path="res://speedy_saucer_game/scenes/level_1.tscn" id="10_dkkco"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mbj8b"]
size = Vector2(1548, 14)

[node name="Level_01" type="Node2D"]
script = ExtResource("1_q2oxr")

[node name="ParallaxBackground" parent="." instance=ExtResource("2_0afmg")]
background_texture = ExtResource("3_b3byx")

[node name="DeathZone" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathZone"]
position = Vector2(158, 163)
shape = SubResource("RectangleShape2D_mbj8b")

[node name="MM_Player" parent="." instance=ExtResource("2_q2oxr")]
position = Vector2(85, 85)

[node name="Traps" type="Node" parent="."]

[node name="Saw" parent="Traps" instance=ExtResource("5_rrhb4")]
position = Vector2(325, 82)

[node name="Saw2" parent="Traps" instance=ExtResource("5_rrhb4")]
position = Vector2(191, 83)

[node name="Saw3" parent="Traps" instance=ExtResource("5_rrhb4")]
position = Vector2(259, 82)

[node name="Spikeball" parent="Traps" instance=ExtResource("6_7ny5r")]
position = Vector2(19, 26)

[node name="Spikeball2" parent="Traps" instance=ExtResource("6_7ny5r")]
position = Vector2(222, 27)

[node name="JumpPads" type="Node" parent="."]

[node name="JumpPad" parent="JumpPads" instance=ExtResource("4_654ul")]
position = Vector2(461, 87)

[node name="JumpPad2" parent="JumpPads" instance=ExtResource("4_654ul")]
position = Vector2(-48, 88)

[node name="TileMapLevel_01" parent="." instance=ExtResource("7_0afmg")]
position = Vector2(-1, 85)
tile_map_data = PackedByteArray("AAD//wIAAAAHAAEAAAD//wEAAAAHAAAAAAD+/wIAAAAHAAEAAAD+/wEAAAAHAAAAAAD9/wIAAAAHAAEAAAD9/wEAAAAHAAAAAAABAAEAAAAHAAAAAAAAAAEAAAAHAAAAAAADAAIAAAAHAAEAAAADAAEAAAAHAAAAAAACAAIAAAAHAAEAAAACAAEAAAAHAAAAAAABAAIAAAAHAAEAAAAAAAIAAAAHAAEAAAD7/wEAAAAJAAEAAAD7/wIAAAAHAAEAAAD7/wMAAAAHAAEAAAD8/wEAAAAHAAAAAAD8/wIAAAAHAAEAAAD8/wMAAAAHAAEAAAD9/wMAAAAHAAEAAAD+/wMAAAAHAAEAAAD//wMAAAAHAAEAAAAAAAMAAAAHAAEAAAABAAMAAAAHAAEAAAACAAMAAAAHAAEAAAADAAMAAAAHAAEAAAAEAAEAAAAHAAAAAAAEAAIAAAAHAAEAAAAEAAMAAAAHAAEAAAAFAAEAAAAHAAAAAAAFAAIAAAAHAAEAAAAFAAMAAAAHAAEAAAAGAAEAAAAHAAAAAAAGAAIAAAAHAAEAAAAGAAMAAAAHAAEAAAAHAAEAAAAHAAAAAAAHAAIAAAAHAAEAAAAHAAMAAAAHAAEAAAAIAAEAAAAHAAAAAAAIAAIAAAAHAAEAAAAJAAEAAAAHAAAAAAAJAAIAAAAHAAEAAAAJAAMAAAAHAAEAAAAKAAEAAAAHAAAAAAAKAAIAAAAHAAEAAAAKAAMAAAAHAAEAAAALAAEAAAAHAAAAAAALAAIAAAAHAAEAAAALAAMAAAAHAAEAAAAMAAEAAAAHAAAAAAAMAAIAAAAHAAEAAAAMAAMAAAAHAAEAAAANAAEAAAAHAAAAAAANAAIAAAAHAAEAAAANAAMAAAAHAAEAAAAOAAEAAAAHAAAAAAAOAAIAAAAHAAEAAAAOAAMAAAAHAAEAAAAPAAEAAAAHAAAAAAAPAAIAAAAHAAEAAAAPAAMAAAAHAAEAAAAQAAEAAAAHAAAAAAAQAAIAAAAHAAEAAAAQAAMAAAAHAAEAAAARAAEAAAAHAAAAAAARAAIAAAAHAAEAAAARAAMAAAAHAAEAAAASAAEAAAAHAAAAAAASAAIAAAAHAAEAAAASAAMAAAAHAAEAAAATAAEAAAAHAAAAAAATAAIAAAAHAAEAAAATAAMAAAAHAAEAAAAUAAEAAAAHAAAAAAAUAAIAAAAHAAEAAAAUAAMAAAAHAAEAAAAVAAEAAAAHAAAAAAAVAAIAAAAHAAEAAAAVAAMAAAAHAAEAAAAWAAIAAAAHAAEAAAAWAAMAAAAHAAEAAAAXAAIAAAAHAAEAAAAXAAMAAAAHAAEAAAAYAAEAAAAHAAAAAAAYAAIAAAAHAAEAAAAYAAMAAAAHAAEAAAAZAAEAAAAHAAAAAAAZAAIAAAAHAAEAAAAZAAMAAAAHAAEAAAAaAAEAAAAHAAAAAAAaAAIAAAAHAAEAAAAaAAMAAAAHAAEAAAAbAAEAAAAHAAAAAAAbAAIAAAAHAAEAAAAbAAMAAAAHAAEAAAAcAAEAAAAHAAAAAAAcAAIAAAAHAAEAAAAcAAMAAAAHAAEAAAAdAAEAAAAHAAAAAAAdAAIAAAAHAAEAAAAdAAMAAAAHAAEAAAAWAAEAAAAHAAAAAAAXAAEAAAAHAAAAAAAeAAEAAAAKAAEAAAAeAAIAAAAHAAEAAAAeAAMAAAAHAAEAAAAfAAEAAAAHAAEAAAAfAAIAAAAHAAEAAAAfAAMAAAAHAAEAAAAgAAEAAAAHAAEAAAAgAAIAAAAHAAEAAAAgAAMAAAAHAAEAAAD6/wEAAAAHAAEAAAD6/wIAAAAHAAEAAAD6/wMAAAAHAAEAAAD5/wEAAAAHAAEAAAD5/wIAAAAHAAEAAAD5/wMAAAAHAAEAAAAhAAEAAAAHAAEAAAAhAAIAAAAHAAEAAAAhAAMAAAAHAAEAAAAiAAEAAAAHAAEAAAAiAAIAAAAHAAEAAAAiAAMAAAAHAAEAAAAeAP//AAAGAAAAAAAeAAAAAAAGAAEAAAAfAP//AAAHAAAAAAAfAAAAAAAHAAEAAAAgAP//AAAKAAEAAAAgAAAAAAAHAAEAAAAIAAMAAAAHAAEAAAD5////AAAHAAEAAAD5/wAAAAAHAAEAAAD6////AAAHAAEAAAD6/wAAAAAHAAEAAAD7////AAAIAAEAAAD7/wAAAAAIAAEAAAD4/wEAAAAHAAEAAAD4/wAAAAAHAAEAAAAfAAQAAAAHAAIAAAAeAAQAAAAHAAIAAAAdAAQAAAAHAAIAAAAcAAQAAAAHAAIAAAAbAAQAAAAHAAIAAAAaAAQAAAAHAAIAAAAZAAQAAAAHAAIAAAAYAAQAAAAHAAIAAAAXAAQAAAAHAAIAAAAWAAQAAAAHAAIAAAAVAAQAAAAHAAIAAAAUAAQAAAAHAAIAAAATAAQAAAAHAAIAAAASAAQAAAAHAAIAAAARAAQAAAAHAAIAAAAQAAQAAAAHAAIAAAAPAAQAAAAHAAIAAAAOAAQAAAAHAAIAAAANAAQAAAAHAAIAAAAMAAQAAAAHAAIAAAALAAQAAAAHAAIAAAAKAAQAAAAHAAIAAAAJAAQAAAAHAAIAAAAIAAQAAAAHAAIAAAAHAAQAAAAHAAIAAAAGAAQAAAAHAAIAAAAFAAQAAAAHAAIAAAAEAAQAAAAHAAIAAAADAAQAAAAHAAIAAAACAAQAAAAHAAIAAAABAAQAAAAHAAIAAAAAAAQAAAAHAAIAAAD//wQAAAAHAAIAAAD+/wQAAAAHAAIAAAD9/wQAAAAHAAIAAAD8/wQAAAAHAAIAAAD7/wQAAAAHAAIAAAD6/wQAAAAHAAIAAAD5/wQAAAAHAAIAAAD4/wQAAAAHAAIAAAD4/wMAAAAHAAEAAAD4/wIAAAAHAAEAAAAkAAQAAAAIAAIAAAAkAAMAAAAIAAEAAAAkAAIAAAAIAAEAAAAkAAEAAAAIAAEAAAAjAAQAAAAHAAIAAAAjAAMAAAAHAAEAAAAjAAIAAAAHAAEAAAAjAAEAAAAHAAEAAAAiAAQAAAAHAAIAAAAhAAQAAAAHAAIAAAAgAAQAAAAHAAIAAAAkAAAAAAAIAAEAAAAkAP//AAAIAAEAAAAkAP7/AAAIAAEAAAAkAP3/AAAIAAEAAAAkAPz/AAAIAAAAAAAjAAAAAAAHAAEAAAAjAP//AAAHAAEAAAAjAP7/AAAHAAEAAAAjAP3/AAAHAAEAAAAjAPz/AAAHAAAAAAAiAAAAAAAHAAEAAAAiAP//AAAHAAEAAAAiAP7/AAAHAAEAAAAiAP3/AAAHAAEAAAAiAPz/AAAHAAAAAAAhAAAAAAAHAAEAAAAhAP//AAAHAAEAAAAhAP7/AAAHAAEAAAAhAP3/AAAHAAEAAAAhAPz/AAAHAAAAAAAgAP7/AAAGAAEAAAAgAP3/AAAGAAEAAAAgAPz/AAAGAAAAAAD7//7/AAAIAAEAAAD7//3/AAAIAAEAAAD7//z/AAAIAAAAAAD6//7/AAAHAAEAAAD6//3/AAAHAAEAAAD6//z/AAAHAAAAAAD5//7/AAAHAAEAAAD5//3/AAAHAAEAAAD5//z/AAAHAAAAAAD4////AAAHAAEAAAD4//7/AAAKAAEAAAD4//3/AAAGAAEAAAD4//z/AAAGAAAAAAD3/wQAAAAGAAIAAAD3/wMAAAAGAAEAAAD3/wIAAAAGAAEAAAD3/wEAAAAGAAEAAAD3/wAAAAAGAAEAAAD3////AAAGAAEAAAD3//7/AAAGAAAAAAA=")

[node name="StartPlatform" parent="." instance=ExtResource("8_aes6a")]
position = Vector2(14, 69)

[node name="Goal" parent="." instance=ExtResource("9_nfwdv")]
position = Vector2(550, -10)
next_level = ExtResource("10_dkkco")

[connection signal="body_entered" from="DeathZone" to="." method="_on_death_zone_body_entered"]
[connection signal="touched_player" from="Traps/Saw" to="." method="_on_trap_touched_player"]
[connection signal="touched_player" from="Traps/Saw2" to="." method="_on_trap_touched_player"]
[connection signal="touched_player" from="Traps/Saw3" to="." method="_on_trap_touched_player"]
[connection signal="touched_player" from="Traps/Spikeball" to="." method="_on_trap_touched_player"]
[connection signal="touched_player" from="Traps/Spikeball2" to="." method="_on_trap_touched_player"]
